[gd_scene load_steps=17 format=3 uid="uid://ddnjhsyy5bwau"]

[ext_resource type="Script" path="res://Game/Stations/StationInteraction.gd" id="1_b5irn"]
[ext_resource type="PackedScene" uid="uid://bdflnfbq0e65b" path="res://Game/DialogueSystem/dialogue.tscn" id="3_0m4lw"]
[ext_resource type="Texture2D" uid="uid://c5ujcvt65lgt3" path="res://Sprites/gezegenler/station_sprites/titanyumfabrikasi1_a.png" id="4_jjb4n"]
[ext_resource type="Texture2D" uid="uid://esfvwdrh1tea" path="res://Sprites/gezegenler/station_sprites/tenis_istasyonu1.png" id="4_ueel0"]
[ext_resource type="Texture2D" uid="uid://bbiaes4dgeof0" path="res://Sprites/gezegenler/station_sprites/istasyon1_uydu diski_a.png" id="5_1wo3u"]
[ext_resource type="Script" path="res://Game/Stations/themis_paths.gd" id="6_im4vg"]
[ext_resource type="Texture2D" uid="uid://cbs2pnprf0u1s" path="res://Sprites/uzaygemisi/resource_ship.png" id="6_tw64p"]

[sub_resource type="Curve2D" id="Curve2D_dljkg"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1553.53, -1554.47, 0, 0, 0, 0, -123.948, 55.1173, 0, 0, 0, 0, 1550.53, -1551.47)
}
point_count = 3

[sub_resource type="Curve2D" id="Curve2D_01rok"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 115, 45, 0, 0, 0, 0, 46, -1269, 0, 0, 0, 0, 115, 46)
}
point_count = 3

[sub_resource type="Curve2D" id="Curve2D_7hcox"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -27, -169, 0, 0, 0, 0, 947, 61, 0, 0, 0, 0, -23, -169)
}
point_count = 3

[sub_resource type="Curve2D" id="Curve2D_ehx8j"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -26, 189, 0, 0, 0, 0, 703, 1329, 0, 0, 0, 0, -26, 194)
}
point_count = 3

[sub_resource type="Curve2D" id="Curve2D_05h6k"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -1922, -58, 0, 0, 0, 0, -23, -24, 0, 0, 0, 0, -1922, -58)
}
point_count = 3

[sub_resource type="Curve2D" id="Curve2D_v2h3p"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -993, 901, 0, 0, 0, 0, 117, -39, 0, 0, 0, 0, -993, 901)
}
point_count = 3

[sub_resource type="Curve2D" id="Curve2D_udnme"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -28, 104, 0, 0, 0, 0, -1234, -1335, 0, 0, 0, 0, -26, 104)
}
point_count = 3

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qajxd"]
radius = 310.708
height = 621.417

[sub_resource type="CircleShape2D" id="CircleShape2D_047kk"]
radius = 2146.06

[node name="TestStation" type="Node2D"]
script = ExtResource("1_b5irn")

[node name="themis_paths" type="Node2D" parent="."]
script = ExtResource("6_im4vg")

[node name="Path2D" type="Path2D" parent="themis_paths"]
rotation = 0.000945735
curve = SubResource("Curve2D_dljkg")

[node name="ship1" type="PathFollow2D" parent="themis_paths/Path2D"]
position = Vector2(1553.53, -1554.47)
rotation = 2.37685

[node name="Sprite2D" type="Sprite2D" parent="themis_paths/Path2D/ship1"]
rotation = 1.6057
scale = Vector2(0.05, 0.05)
texture = ExtResource("6_tw64p")

[node name="Path2D2" type="Path2D" parent="themis_paths"]
curve = SubResource("Curve2D_01rok")

[node name="ship2" type="PathFollow2D" parent="themis_paths/Path2D2"]
position = Vector2(115, 45)
rotation = -1.62326

[node name="Sprite2D" type="Sprite2D" parent="themis_paths/Path2D2/ship2"]
position = Vector2(193.836, 8.23318)
rotation = 1.5708
scale = Vector2(0.05, 0.05)
texture = ExtResource("6_tw64p")

[node name="Path2D3" type="Path2D" parent="themis_paths"]
curve = SubResource("Curve2D_7hcox")

[node name="ship3" type="PathFollow2D" parent="themis_paths/Path2D3"]
position = Vector2(-27, -169)
rotation = 0.231892

[node name="Sprite2D" type="Sprite2D" parent="themis_paths/Path2D3/ship3"]
rotation = 1.55509
scale = Vector2(0.05, 0.05)
texture = ExtResource("6_tw64p")

[node name="Path2D4" type="Path2D" parent="themis_paths"]
curve = SubResource("Curve2D_ehx8j")

[node name="ship4" type="PathFollow2D" parent="themis_paths/Path2D4"]
position = Vector2(-26, 189)
rotation = 1.00186

[node name="Sprite2D" type="Sprite2D" parent="themis_paths/Path2D4/ship4"]
rotation = 1.5708
scale = Vector2(0.05, 0.05)
texture = ExtResource("6_tw64p")

[node name="Path2D5" type="Path2D" parent="themis_paths"]
curve = SubResource("Curve2D_05h6k")

[node name="ship5" type="PathFollow2D" parent="themis_paths/Path2D5"]
position = Vector2(-1922, -58)
rotation = 0.0179022

[node name="Sprite2D" type="Sprite2D" parent="themis_paths/Path2D5/ship5"]
rotation = 1.5708
scale = Vector2(0.05, 0.05)
texture = ExtResource("6_tw64p")

[node name="Path2D6" type="Path2D" parent="themis_paths"]
curve = SubResource("Curve2D_v2h3p")

[node name="ship6" type="PathFollow2D" parent="themis_paths/Path2D6"]
position = Vector2(-993, 901)
rotation = -0.702661

[node name="Sprite2D" type="Sprite2D" parent="themis_paths/Path2D6/ship6"]
rotation = 1.5708
scale = Vector2(0.05, 0.05)
texture = ExtResource("6_tw64p")

[node name="Path2D7" type="Path2D" parent="themis_paths"]
curve = SubResource("Curve2D_udnme")

[node name="ship7" type="PathFollow2D" parent="themis_paths/Path2D7"]
position = Vector2(-28, 104)
rotation = -2.26833

[node name="Sprite2D" type="Sprite2D" parent="themis_paths/Path2D7/ship7"]
rotation = 1.5708
scale = Vector2(0.05, 0.05)
texture = ExtResource("6_tw64p")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("4_ueel0")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
rotation = 0.124866
shape = SubResource("CapsuleShape2D_qajxd")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="Dialogue" parent="CanvasLayer" instance=ExtResource("3_0m4lw")]

[node name="sprites" type="Node2D" parent="."]

[node name="Sprite2D3" type="Sprite2D" parent="sprites"]
position = Vector2(1000, 0)
scale = Vector2(1.5, 1.5)
texture = ExtResource("4_jjb4n")

[node name="Sprite2D5" type="Sprite2D" parent="sprites"]
position = Vector2(-1936.44, 0)
rotation = 3.14159
scale = Vector2(1.5, 1.5)
texture = ExtResource("4_jjb4n")

[node name="Sprite2D4" type="Sprite2D" parent="sprites"]
position = Vector2(756, 1331)
rotation = 1.13446
scale = Vector2(1.5, 1.5)
texture = ExtResource("4_jjb4n")

[node name="Sprite2D7" type="Sprite2D" parent="sprites"]
position = Vector2(-1250, -1250)
rotation = -2.35619
scale = Vector2(1.5, 1.5)
texture = ExtResource("4_jjb4n")

[node name="Sprite2D8" type="Sprite2D" parent="sprites"]
position = Vector2(1524, -1606)
rotation = -0.785398
scale = Vector2(1.5, 1.5)
texture = ExtResource("4_jjb4n")

[node name="Sprite2D9" type="Sprite2D" parent="sprites"]
position = Vector2(-1000, 1000)
rotation = 2.35619
scale = Vector2(1.5, 1.5)
texture = ExtResource("4_jjb4n")

[node name="Sprite2D10" type="Sprite2D" parent="sprites"]
position = Vector2(-1067, 402)
rotation = 2.35619
texture = ExtResource("5_1wo3u")

[node name="Sprite2D11" type="Sprite2D" parent="sprites"]
position = Vector2(-305, -748)
rotation = 0.977384
texture = ExtResource("5_1wo3u")

[node name="Sprite2D12" type="Sprite2D" parent="sprites"]
position = Vector2(777, 746)
rotation = 3.37023
texture = ExtResource("5_1wo3u")

[node name="Sprite2D13" type="Sprite2D" parent="sprites"]
position = Vector2(1165, -539)
rotation = -4.26209
texture = ExtResource("5_1wo3u")

[node name="titanium1" type="Sprite2D" parent="sprites"]
position = Vector2(0, -1300)
rotation = -1.5708
texture = ExtResource("4_jjb4n")

[node name="themis_safezone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="themis_safezone"]
shape = SubResource("CircleShape2D_047kk")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
